# impromptu-old

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: impromptu.hpp
include/impromptu/: ansi.hpp  external_info.hpp  git.hpp  host.hpp  libgit2.hpp  on_demand.hpp  shell.hpp  subprocess.hpp  terminal.hpp  time.hpp  user.hpp  vcs.hpp
src/: bench.cpp  fkoehler.cpp
src/impromptu/: external_info.cpp  git.cpp  host.cpp  shell.cpp  subprocess.cpp  terminal.cpp  time.cpp  user.cpp  vcs.cpp
tools/: run_bench
